# piet-embedded

./: .gitignore  Cargo.toml
.cargo/: config
piet/: Cargo.toml
piet-common/: Cargo.toml
piet-common/src/: embedded_graphics_back.rs  lib.rs
piet-embedded-graphics/: Cargo.toml  README.md
piet-embedded-graphics/examples/: basic-cairo.rs  basic.rs
piet-embedded-graphics/src/: batch.rs  brush.rs  context.rs  display.rs  grapheme.rs  image.rs  lib.rs  status.rs  test.rs  text.rs
piet/src/: color.rs  error.rs  gradient.rs  lib.rs  null_renderer.rs  render_context.rs  shapes.rs
