[package]
name = "piet-common"
version = "0.0.7"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "Selection of a single preferred back-end for piet"
license = "MIT/Apache-2.0"
repository = "https://github.com/linebender/piet"
edition = "2018"
keywords = ["graphics", "2d", "no_std"]

[features]
#d2d = ["piet-direct2d"]
#cairo = ["piet-cairo", "cairo-rs"]
#web = ["piet-web"]
embedded = ["piet-embedded-graphics", "embedded-graphics"]

[dependencies]
piet = { version = "0.0.7", path = "../piet" }
#piet-cairo = { version = "0.0.7", path = "../piet-cairo", optional = true }
#piet-direct2d = { version = "0.0.7", path = "../piet-direct2d", optional = true }
#piet-web = { version = "0.0.7", path = "../piet-web", optional = true }
#cairo-rs = { version = "0.7.1", default_features = false, optional = true}
piet-embedded-graphics = { version = "0.0.1", path = "../piet-embedded-graphics", optional = true }
embedded-graphics = { version = "0.5.2", optional = true }

#### Sync with piet-common/src/lib.rs
[target.'cfg(not(any(target_arch="wasm32", target_os="windows", target_os="none")))'.dependencies] ####
#piet-cairo = { version = "0.0.7", path = "../piet-cairo" }
#cairo-rs = { version = "0.7.1", default_features = false}

[target.'cfg(target_os="windows")'.dependencies]
#piet-direct2d = { version = "0.0.7", path = "../piet-direct2d" }
#direct2d = "0.2.0"
#directwrite = "0.1.4"
#dxgi = "0.1.7"
#direct3d11 = "0.1.7"

[target.'cfg(target_arch="wasm32")'.dependencies]
#piet-web = { version = "0.0.7", path = "../piet-web" }

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies] ####
piet-embedded-graphics = { version = "0.0.1", path = "../piet-embedded-graphics" } ####
embedded-graphics = "0.5.2" ####

[dev-dependencies]
#image = "0.20.1"
