[package]
name = "piet-embedded-graphics"
version = "0.0.1"
authors = ["Lee Lup Yuen <luppy@appkaki.com>"]
description = "embedded-graphics backend for piet 2D graphics abstraction."
license = "MIT/Apache-2.0"
repository = "https://github.com/lupyuen/piet-embedded"
edition = "2018"
keywords = ["graphics", "2d", "embedded", "no-std"]
categories = ["rendering::graphics-api"]

[dependencies]
piet                 = { version = "0.0.7", path = "../piet" }
unicode-segmentation = "1.3.0"
embedded-graphics    = "0.5.2"
arrayvec = { version = "0.5.1", default-features = false } #### Disable default features to support `no_std`

[dev-dependencies]
piet-test = { version = "0.0.7", path = "../piet-test" }