[package]
name = "piet-embedded-graphics"
version = "0.0.1"
authors = ["Lee Lup Yuen <luppy@appkaki.com>"]
description = "embedded-graphics backend for piet 2D graphics abstraction."
license = "MIT/Apache-2.0"
repository = "https://github.com/lupyuen/piet-embedded"
edition = "2018"
keywords = ["graphics", "2d", "embedded", "no-std"]
categories = ["rendering::graphics-api"]

[dependencies]
piet                 = { version = "0.0.7", path = "../piet" }
unicode-segmentation = "1.3.0"
heapless             = "0.5.1" #### `static` friendly data structures that don't require dynamic memory allocation
embedded-graphics    = "0.5.2"
embedded-hal         = "0.2.3"
st7735-lcd           = { features = [ "graphics" ], path = "../../st7735-lcd-batch-rs" } #### TODO: https://github.com/lupyuen/st7735-lcd-batch-rs
arrayvec             = { version = "0.5.1", default-features = false }
mynewt = { path = "../../stm32bluepill-mynewt-sensor/rust/mynewt" } # Import mynewt library
cortex-m             = "0.6.1" ####
cortex-m-rt          = "0.6.10" ####

[dev-dependencies]
piet-test = { version = "0.0.7", path = "../piet-test" }

[features]
# default   = []               # Disable batching  
default     = ["noblock_spi"]  # Render graphics by batching pixels into rows and blocks
noblock_spi = []