[package]
name = "piet"
version = "0.0.7"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "An abstraction for 2D graphics. Experimental embedded version."
license = "MIT/Apache-2.0"
repository = "https://github.com/lupyuen/piet-embedded"
edition = "2018"
keywords = ["graphics", "2d", "no-std"]
categories = ["rendering::graphics-api"]

[dependencies]
#### kurbo = "0.5.4"
kurbo = { version = "0.5.5", path = "../../kurbo-embedded" } ####
boow = { version = "0.1.3", default-features = false } #### Substitute for COW
libm = "0.2.1" #### Math library